--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alpakaio/i18next-php",
+    "name": "it-tem-papa/i18next-php",
     "description": "A port of the i18next JS library for PHP",
     "keywords": [
         "i18n",
